--- a/kanbanboard/frontend/src/assets/scss/CardList.scss
+++ b/kanbanboard/frontend/src/assets/scss/CardList.scss
@@ -1,12 +1,27 @@
 .Card_List {
     position: relative; 
-    z-index: 1; 
-    background: #fff; 
-    width: 100%; 
-    padding: 10px 10px 10px 15px; 
-    margin: 0 0 10px 0; 
-    overflow: auto; 
-    border: 1px solid #e5e5df; 
-    border-radius: 3px; 
-    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+    list-style-type: none; 
+    display: inline-block; 
+    vertical-align: top; 
+    white-space: normal; 
+    height: 100%; 
+    width: 33%; 
+    padding: 0 20px; 
+    overflow: auto;
+
+    &:not(:last-child):after {
+        content: ''; 
+        position: absolute; 
+        top: 0; 
+        right: 0; 
+        width: 1px; 
+        height: 99%; 
+        background: linear-gradient(to bottom, #eee 0%, #ccc 50%, #eee 100%) fixed;
+    }
+
+    h1 {
+        font-weight: 500; 
+        color: #3b414c; 
+        font-size: 20px;
+    }
 }
